--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   number_display: ^2.2.1
+  country_icons: ^1.1.1
+
 
 dev_dependencies:
   flutter_test:
