--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   number_display: ^2.2.1
   country_icons: ^1.1.1
+  link_text: ^0.1.2
 
 
 dev_dependencies:
